samples/_failures_safe/1761729803_ef799e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a791340.c: In function ‘main’:
./samples/SAFE/__tmp_7a791340.c:139:12: error: missing terminating " character
  139 |     printf("Enter log entries (format
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7a791340.c:139:5: error: expected expression at end of input
  139 |     printf("Enter log entries (format
      |     ^~~~~~
./samples/SAFE/__tmp_7a791340.c:139:5: error: expected declaration or statement at end of input
